fix spacing on nav bar close to mobile so liens dont wrap

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -57,6 +57,9 @@
   .instagramIcon {
     right: 20px;
   }
+  .homeIcon {
+    margin-right: 0px;
+  }
 }
 
 @media (max-width: $tablet) {
